--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,7 +10,7 @@
 <body>
      <h1>VS CODE SITE</h1>
      <img id="vs1"src="vscod.png">
-   <h2>O Visual Studio Code é um editor de código-fonte desenvolvido pela Microsoft para Windows,
+   <h2>O Visual Studio Code e um editor de codigo-fonte desenvolvido pela Microsoft para Windows,
         Linux e macOS. Ele inclui suporte para depuração, controle de versionamento Git incorporado,
          realce de sintaxe, complementação inteligente de código, snippets.
           
