--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
      <h1>VS CODE SITE</h1>
-     <img id="vs1"src="vscod.png">
+     <img id="vs1"src="">
    <h2>O Visual Studio Code e um editor de codigo-fonte desenvolvido pela Microsoft para Windows,
         Linux e macOS. Ele inclui suporte para depuração, controle de versionamento Git incorporado,
          realce de sintaxe, complementação inteligente de código, snippets.
           
-       <img id="VS2" src="vscod1.jpg" >
+       <img id="VS2" src="" >
 </h2>
 </body>
 </html>
