--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <title>site VS code</title>
 </head>
 <body>
+  <button onclick="changeFontSize('aumentar')">Aumentar</button>
+<button onclick="changeFontSize('reduzir')">Reduzir</button><script>
+function changeFontSize(action){
+const elements = ['h1', 'p'];
+elements.map(element=>{
+
+const selector = document.querySelector(element);
+let value = getComputedStyle(selector).getPropertyValue('font-size');
+value = value.replace('px', '');
+value = action === 'aumentar' ? parseInt(value) + 1 : parseInt(value) - 1;
+selector.style.fontSize = `${value}px`;
+})
+}
+</script>
      <h1>VS CODE SITE</h1>
      <img id="vs1" src= "vscod.png">
    <h2>O Visual Studio Code e um editor de codigo-fonte desenvolvido pela Microsoft para Windows,
