--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <button onclick="changeFontSize('aumentar')">Aumentar</button>
 <button onclick="changeFontSize('reduzir')">Reduzir</button><script>
 function changeFontSize(action){
-const elements = ['h1', 'p'];
+const elements = ['h1', 'h2'];
 elements.map(element=>{
 
 const selector = document.querySelector(element);
